OpenVi 7.7.32 -> OpenVi 7.8.33-dev: Fri Nov 28 16:40:57 2025
        + Update email address (johnsonjh.dev@gmail.com)

OpenVi 7.6.31 -> OpenVi 7.7.32: Thu Oct 2 03:49:26 2025
        + Try to query `pkg-config` for ncurses flags and libs on some systems
        + Fix filename completion using `D_NAMLEN` as defined in the compat
          `include/compat.h` header; patch from @jerryfletcher21; closes #22.
        + Fix `p` command when used with a count
        + Fix crash with expandtab and running external commands; fix from
          Jerry Fletcher, OK job@
        + Update docs to add percentage to ruler after recent changes

OpenVi 7.6.30 -> OpenVi 7.6.31: Sun Apr 6 15:25:04 2025
        + Don't require xinstall to be built for `install`, `strip`, and
          `sstrip` targets to complete successfully.
        + In xinstall's create_tempfile() pass pointer to full pathname to
          strlcat(); fixes a potential buffer overrun; also check strlcpy()
          and strlcat() return value to detect truncations; based on a diff
          from naddy@; ok naddy@ tb@ deraadt@
        + Support building for Managarm (xbstrap cross-compilation only)

OpenVi 7.5.29 -> OpenVi 7.6.30: Mon Oct 7 08:45:39 2024
        + Bump for OpenBSD 7.6 release

OpenVi 7.5.28 -> OpenVi 7.5.29: Tue May 21 05:26:38 2024
        + Support building natively on OS/400; verified using PASE for IBM i
          7.5 with GCC 10.5 (gcc10) and ncurses 6.0 (ncurses, ncurses-devel)
        + Add a new output level, M_XINFO, which outputs an informational
          message and ignores the state of the verbose and silent flags
        + Show version command output even in ex silent mode
        + Update the usage help text to document the new `-C` option
        + Minor changes to xinstall.c to appease Oracle Lint warnings
        + Consistently use .Dq for double-quoting in man pages
        + Fix various spelling errors and typos, mostly in comments
        + Increase buf size
