@@ -32,9 +32,6 @@
 #endif /* ifdef __solaris__ */
 #include <signal.h>
 #include <bsd_termios.h>
-#if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ)
-# include <termio.h>
-#endif /* if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ) */
 #include <bsd_unistd.h>
 
 #ifdef __solaris__
