@@ -31,9 +31,6 @@
 #include <curses.h>
 #include <term.h>
 #include <bsd_termios.h>
-#if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ)
-# include <termio.h>
-#endif /* #if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ) */
 #include <bsd_unistd.h>
 
 #include "../common/common.h"
