@@ -32,9 +32,6 @@
 
 #include <curses.h>
 #include <bsd_termios.h>
-#if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ)
-# include <termio.h>
-#endif /* #if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ) */
 #ifdef __NetBSD__
 # include <term.h>
 #endif /* ifdef __NetBSD__ */
