@@ -44,9 +44,6 @@
 # include <util.h>
 #else
 # include <bsd_termios.h>
-# if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ)
-#  include <termio.h>
-# endif /* if defined(__GNU_LIBRARY__) && defined(__GLIBC_PREREQ) */
 # include <bsd_unistd.h>
 # include <util.h>
 #endif /* if defined(__OpenBSD__) || defined(__NetBSD__) */
