@@ -1,4 +1,5 @@
-OpenVi 7.7.32 -> OpenVi 7.8.33-dev: Fri Nov 28 16:40:57 2025
+OpenVi 7.7.32 -> OpenVi 7.8.33-dev: Tue Dec 23 12:06:57 2025
+        + Do not include termio.h on Linux systems
         + Update email address (johnsonjh.dev@gmail.com)
 
 OpenVi 7.6.31 -> OpenVi 7.7.32: Thu Oct 2 03:49:26 2025
